--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,3 +3,4 @@ v0.1.1, 2019-04-11 -- Rename from "docs" to "discourse-docs", rename DiscourseDo
 v0.2.0, 2019-04-30 -- Restructure to simplify DiscourseAPI and create parsers.py
 v0.3.0, 2019-05-15 -- Support redirects mapping table in the index topic
 v0.4.0, 2019-05-17 -- Redirect to forum topic page instead of 404 for topics outside "docs" category
+v0.4.1, 2019-06-25 -- Fix url_prefix bugs
