--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,3 +8,4 @@ v0.5.0, 2019-07-02 -- Thoroughly fix URL prefix
 v0.6.0, 2019-07-16 -- Make the parser as parameter to docs
 v0.6.1, 2019-07-26 -- Add /sitemap.txt
 v0.6.2, 2019-07-26 -- Add content type for sitemap.txt
+v0.6.3, 2019-07-29 -- Ensure sitemap.txt is utf-8 content-type
