--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,4 +21,5 @@ v0.10.2, 2020-01-24 -- Fix slug non alpha numerical issue
 v0.10.3, 2020-02-06 -- Fix check if undefined values
 v0.11.0, 2020-02-04 -- Add poll conversion
 v0.11.1, 2020-02-14 -- Fix AttributeError issue
-v0.12.0, 2020-05-15 -- Make category_id optionnal
+v0.12.0, 2020-05-15 -- Make category_id optional
+v1.0.0, 2020-06-03 -- Make session mandatory; stop using canonicalwebteam.http.CachedSession
