Remove meta div that breaks Vanilla

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -27,3 +27,4 @@ v1.0.1, 2020-07-15 -- Only strip space when there is space to strip
 v2.0.0, 2020-08-14 -- Discourse docs for engage pages and rename discourse_docs to discourse
 v2.0.1, 2020-09-15 -- Add getter function to return only a single engage page
 v2.0.2, 2020-10-01 -- Refactor parsers
+v2.0.3, 2020-10-22 -- Remove meta div that breaks Vanilla
