Add new version

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -29,3 +29,4 @@ v2.0.1, 2020-09-15 -- Add getter function to return only a single engage page
 v2.0.2, 2020-10-01 -- Refactor parsers
 v2.0.3, 2020-10-22 -- Remove meta div that breaks Vanilla
 v2.0.4, 2020-11-12 -- Make url prefix optional on url map
+v2.0.5, 2020-11-18 -- Add preview option for inactive pages
