Add generated sitemap.xml

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -30,3 +30,4 @@ v2.0.2, 2020-10-01 -- Refactor parsers
 v2.0.3, 2020-10-22 -- Remove meta div that breaks Vanilla
 v2.0.4, 2020-11-12 -- Make url prefix optional on url map
 v2.0.5, 2020-11-18 -- Add preview option for inactive pages
+v2.1.0, 2020-11-20 -- Add sitemap.xml endpoint
